--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,36 @@
-spring.application.name=products
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+
+spring.datasource.url=jdbc:mysql://localhost:3306/ecommerce
+spring.datasource.username=root
+spring.datasource.password=Bogota#2O24
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+# is possible to configure parameters in environment variables in the next 3 lines  
+
+#spring.datasource.url=${DATASOURCE_URL}
+#spring.datasource.username=${DATASOURCE_USERNAME}
+#spring.datasource.password=${DATASOURCE_PASSWORD}
+
+
+#english language configuration
+
+spring.web.locale=en_US
+spring.web.locale-resolver=fixed
+
+#global format to date
+spring.jackson.date-format=dd/MM/yyyy
+spring.jackson.time-zone=EST
+#spring.jackson.serialization.write-dates-as-timestamps=false
+
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+logging.level.org.springframework.jdbc.core = TRACE
+
+server.servlet.context-path=/api/products/
+#server.port=${PORT}
+server.port=8099
+
