--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,20 @@
 		    <version>2.3.0</version>
 		</dependency>
 		
+		<!-- https://mvnrepository.com/artifact/com.amazonaws/aws-java-sdk-s3 -->
+		<dependency>
+    		<groupId>com.amazonaws</groupId>
+    		<artifactId>aws-java-sdk-s3</artifactId>
+    		<version>1.12.701</version>
+		</dependency>
+		
+		<!-- https://mvnrepository.com/artifact/com.amazonaws/aws-java-sdk-core -->
+		<dependency>
+    		<groupId>com.amazonaws</groupId>
+    		<artifactId>aws-java-sdk-core</artifactId>
+    		<version>1.12.701</version>
+		</dependency>
+		
 	</dependencies>
 
 	<build>
