--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -22,12 +22,7 @@ jobs:
     - name: Build with Maven
       run: mvn -B package --file pom.xml
 
-    - name: Increment version and generate changelog
-      uses: cicirello/auto-release-draft@v1
+    - name: Semantic release
+      uses: dawidd6/action-semantic-release@v3
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
-
-    - name: Publish to GitHub Packages Apache Maven
-      run: mvn deploy -s $GITHUB_WORKSPACE/settings.xml
-      env:
-        GITHUB_TOKEN: ${{ github.token }}
