--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -35,6 +35,8 @@ jobs:
 
     - name: Run Changelog CI
       uses: saadmk11/changelog-ci@v1.1.2
+      with:
+        release_version: ${{ steps.versioning.outputs.new_version }}
 
     - name: Publish to GitHub Packages Apache Maven
       run: mvn deploy -s $GITHUB_WORKSPACE/settings.xml
