--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -11,32 +11,18 @@ jobs:
 
     runs-on: ubuntu-latest
 
-    services:
-      mysql:
-        image: mysql:8
-        env:
-          MYSQL_ROOT_PASSWORD: password # Cambia esto por tu contraseña
-          MYSQL_DATABASE: testdb # Cambia esto por el nombre de tu base de datos de prueba
-        ports:
-          - 3306:3306
-        options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
-
     steps:
     - uses: actions/checkout@v3
 
-    - name: Set up JDK 17
+    - name: Set up JDK 17 and Maven cache
       uses: actions/setup-java@v3
       with:
         java-version: '17'
+        distribution: 'temurin'
+        cache: 'maven'
 
     - name: Build with Maven
       run: mvn -B package --file pom.xml
-
-    - name: Create tables for testing
-      run: mysql -h localhost -u root -ppassword testdb < tables.sql
-      env:
-        MYSQL_ROOT_PASSWORD: password # Cambia esto por tu contraseña
-        MYSQL_DATABASE: testdb # Cambia esto por el nombre de tu base de datos de prueba
 
     - name: Auto Increment Semver Action
       uses: MCKanpolat/auto-semver-action@v2
