--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -1,56 +1,47 @@
 name: project pipeline
 
-env:
-  PRERELEASE_BRANCHES: '' # Comma separated list of prerelease branch names. 'alpha,rc, ...'
-  
 on:
   push:
-     branches: [ "main" ]
+    branches: [ "main" ]
   pull_request:
-     branches: [ "main" ]
-     
+    branches: [ "main" ]
+
 jobs:
-  build:
-    name: Continuous Integration
+  build_test:
+
     runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v3
-    - name: Setup node v16
-      uses: actions/setup-node@v3
+    - name: Set up JDK 17
+      uses: actions/setup-java@v3
       with:
-        node-version: 16.x
-    - run: yarn
-    - run: yarn ci
-    - name: Establish context
-      id: context
-      uses: dolittle/establish-context-action@v2 # Replace with ./ if used withing dolittle/establish-context-action
-      with:
-        prerelease-branches: ${{ env.PRERELEASE_BRANCHES }}
+        java-version: '17'
+        distribution: 'temurin'
+        cache: maven
+    - name: Build with Maven
+      run: mvn -B package --file pom.xml
 
-    - name: Increment version
-      id: increment-version
-      if: ${{ steps.context.outputs.should-publish == 'true' }}
-      uses: dolittle/increment-version-action@v2
+   
+  publish-job:
+    runs-on: ubuntu-latest
+    needs: build_test
+    steps:
+    - uses: actions/checkout@v3
+    - uses: actions/setup-java@v3
       with:
-        version: ${{ steps.context.outputs.current-version }}
-        release-type: ${{ steps.context.outputs.release-type }}
-
-    - name: Prepend to Changelog
-      if: ${{ steps.context.outputs.should-publish == 'true' }}
-      uses: ./
+        java-version: '17'
+        distribution: 'temurin'
+    - name: Auto Increment Semver Action
+      uses: MCKanpolat/auto-semver-action@v2
+      id: versioning
       with:
-        version: ${{ steps.increment-version.outputs.next-version }}
-        body: ${{ steps.context.outputs.pr-body }}
-        pr-url: ${{ steps.context.outputs.pr-url }}
-        changelog-path: CHANGELOG.md
-        user-email: build@dolittle.com
-        user-name: dolittle-build
-
-    - name: Create GitHub Release
-      if: ${{ steps.context.outputs.should-publish == 'true' }}
-      uses: dolittle/github-release-action@v2
+        releaseType: patch 
+        incrementPerCommit: false
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+    - run: mvn --batch-mode --update-snapshots verify
+    - run: mkdir staging && cp target/*.jar staging
+    - uses: actions/upload-artifact@v3
       with:
-        token: ${{  secrets.BUILD_PAT  }}
-        version: ${{ steps.increment-version.outputs.next-version }}
-        body: ${{ steps.context.outputs.pr-body }}
+        name: Package
+        path: staging
