--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
 	<description>Demo project for ecommerce test</description>
 	<properties>
 		<java.version>17</java.version>
+		<version_number>1.0.0</version_number>
 	</properties>
 	<dependencies>
 		<dependency>
